k8s/amunchain-networkpolicy-max-allpods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: amunchain-max-security-allpods
  namespace: amunchain
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 30333
        - protocol: TCP
          port: 9090
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
