k8s/kyverno-deny-host-namespaces.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-host-namespaces
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: block-hostnetwork-hostpid-hostipc
      match:
        any:
          - resources:
              kinds: ["Pod"]
      validate:
        message: "hostNetwork/hostPID/hostIPC are forbidden in Enterprise policy."
        pattern:
          spec:
            =(hostNetwork): false
            =(hostPID): false
            =(hostIPC): false
